chore: update base system and dependencies - update the debian system to latest patches - use latest nvm script - install latest supported npm using 'nvm install-latest-npm'
Signed-off-by: Ismail Arif <38789073+ismxilxrif@users.noreply.github.com>

--- a/images/bench/Dockerfile
+++ b/images/bench/Dockerfile
@@ -6,6 +6,7 @@ ARG GIT_REPO=https://github.com/frappe/bench.git
 ARG GIT_BRANCH=v5.x
 
 RUN apt-get update \
+    && DEBIAN_FRONTEND=noninteractive apt-get full-upgrade -y \
     && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     # For frappe framework
     git \
@@ -128,10 +129,11 @@ ENV NODE_VERSION=18.18.2
 ENV NVM_DIR=/home/frappe/.nvm
 ENV PATH=${NVM_DIR}/versions/node/v${NODE_VERSION}/bin/:${PATH}
 
-RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash \
+RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash \
     && . ${NVM_DIR}/nvm.sh \
     && nvm install ${NODE_VERSION_14} \
     && nvm use v${NODE_VERSION_14} \
+    && nvm install-latest-npm \
     && npm install -g yarn \
     && nvm install ${NODE_VERSION} \
     && nvm use v${NODE_VERSION} \
