--- a/images/custom/Containerfile
+++ b/images/custom/Containerfile
@@ -13,6 +13,7 @@ ENV PATH=${NVM_DIR}/versions/node/v${NODE_VERSION}/bin/:${PATH}
 
 RUN useradd -ms /bin/bash frappe \
     && apt-get update \
+    && apt-get full-upgrade -y \
     && apt-get install --no-install-recommends -y \
     curl \
     git \
@@ -39,10 +40,11 @@ RUN useradd -ms /bin/bash frappe \
     jq \
     # NodeJS
     && mkdir -p ${NVM_DIR} \
-    && curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash \
+    && curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash \
     && . ${NVM_DIR}/nvm.sh \
     && nvm install ${NODE_VERSION} \
     && nvm use v${NODE_VERSION} \
+    && nvm install-latest-npm \
     && npm install -g yarn \
     && nvm alias default v${NODE_VERSION} \
     && rm -rf ${NVM_DIR}/.cache \
